# nonebot-plugin-tohochouqian

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_chouqian/: __init__.py  trs.xlsx
